# EndtoEnd-Sentiment-pipeline

./: .gitignore  README.md  dockerfile  pyproject.toml
app/: app.py  inference.py  utils_info.py
app/static/: index.html
data_ingestion_pipeline/: ingest_to_preprocess.py
utils/: train.py  utils_download.py
