[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.12.0"
dependencies = [
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "fastapi>=0.115.8",
    "pandas>=2.3.1",
    "pydantic>=2.11.1",
    "scikit-learn>=1.7.1",
    "torch>=2.7.1",
    "transformers>=4.53.2",
    "uvicorn>=0.35.0",
    "wandb>=0.21.0",
    "zenml[server]==0.84.0",
]
